Remove export for removed package